fixed bug as click button not working, removed semi-colon, aligned h2.

--- a/HandlingEvents/styles.css
+++ b/HandlingEvents/styles.css
@@ -1,3 +1,8 @@
+Body
+{
+   font-family: Arial, Helvetica, sans-serif;
+}
+
 .main_divstyle {
     border: 1;
     box-shadow: -1px -2px 3px 1px black;
@@ -7,16 +12,34 @@
     align-items: center;
     
 }
-.divstyle 
-{
-    border: 1;
-    box-shadow: -1px -2px 3px 1px black;
-    text-shadow: 0 0 0px black;
-    background-color: #c8dfec;
-}
-    
 
-Body
+.appbody 
 {
-   font-family: Arial, Helvetica, sans-serif;
+    background: #097C9B;
+    border: 1px solid #ff0;
+    padding: 10px;
+    margin: auto;
+    min-width: 30em;
+    max-width: 30em;
+    text-align: center;
+}
+
+#txtinput 
+{
+    text-align: center;
+    width: 20em;
+    height: 30px;
+    font-size: 24px;
+    color: #cc0000;
+    background-color: #fff;
+}
+
+button 
+{
+    background-color: #fff;
+    width: 150px;
+    height: 60px;
+    font-size: 20px;
+    border: 1px solid #097C9B;
+    
 }
